# mlqc

./: .gitignore  README.md  environment.yml  paths.py  pyproject.toml  setup.py
mlqc.egg-info/: PKG-INFO  SOURCES.txt
models/GMI_pretrained/: GMI_GPM_channel_predictor_10H_nonocean.pt  GMI_GPM_channel_predictor_10H_ocean.pt  GMI_GPM_channel_predictor_10V_nonocean.pt  GMI_GPM_channel_predictor_10V_ocean.pt  GMI_GPM_channel_predictor_166H_nonocean.pt  GMI_GPM_channel_predictor_166H_ocean.pt  GMI_GPM_channel_predictor_166V_nonocean.pt  GMI_GPM_channel_predictor_166V_ocean.pt  GMI_GPM_channel_predictor_183+-3V_nonocean.pt  GMI_GPM_channel_predictor_183+-3V_ocean.pt  GMI_GPM_channel_predictor_183+-7V_nonocean.pt  GMI_GPM_channel_predictor_183+-7V_ocean.pt  GMI_GPM_channel_predictor_19H_nonocean.pt  GMI_GPM_channel_predictor_19H_ocean.pt  GMI_GPM_channel_predictor_19V_nonocean.pt  GMI_GPM_channel_predictor_19V_ocean.pt  GMI_GPM_channel_predictor_24V_nonocean.pt  GMI_GPM_channel_predictor_24V_ocean.pt  GMI_GPM_channel_predictor_37H_nonocean.pt  GMI_GPM_channel_predictor_37H_ocean.pt  GMI_GPM_channel_predictor_37V_nonocean.pt  GMI_GPM_channel_predictor_37V_ocean.pt  GMI_GPM_channel_predictor_89H_nonocean.pt  GMI_GPM_channel_predictor_89H_ocean.pt  GMI_GPM_channel_predictor_89V_nonocean.pt  GMI_GPM_channel_predictor_89V_ocean.pt
paper/case_studies/: RFI.ipynb  RFI_glint.ipynb  anomalous_striping.ipynb  channel_degradation.ipynb  geolocation_errors.ipynb  (+3 more)
src/: model_operations.py  sensor_info.py  surface.py  training_funcs.py
training/: create_training_data_GMI.py
(+132 files in other folders)
